<resources>
    <string name="app_name">ETest</string>
    <string name="login_input_username">请输入用户名</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login_login_text">登录</string>
    <string name="home_fragment_free_pairing">自由配对键盘编号</string>
    <string name="home_fragment_fixed_pairing">固定配对键盘编号</string>
    <string name="home_fragment_s52plus">S52plus</string>
    <string name="home_fragment_frequency">CH:16</string>
    <string name="home_fragment_paper_bank">试卷库</string>
    <string name="home_fragment_name_collection">花名冊</string>
    <string name="home_fragment_message_box">短信</string>
    <string name="home_fragment_score_book">成绩册</string>
    <string name="home_fragment_manager">管理</string>

    <string name="home_fragment_new_parper">新建试卷</string>
    <string name="home_fragment_fill_choose">刷选</string>
    <string name="home_fragment_class_student_num">人数：</string>
    <string name="home_fragment_class_student_flag">人</string>

    <string name="login_username_or_password_error">用户名或密码错误，请重试！</string>
    <string name="login_username_is_empty">请输入用户名</string>
    <string name="login_password_is_empty">请输入密码</string>
    <string name="login_password_invald">密码格式不对</string>
    <string name="network_error">网络出错，请检查网络！</string>

    <string name="dialog_loading">正在加载中，请稍后……</string>


    <string name="basestation_manager_connect_type_text">连接类型</string>
    <string name="basestation_manager_connect_title">基站连接</string>
    <string name="basestation_manager_connect_type_usb">USB</string>
    <string name="basestation_manager_connect_type_tcp">TCP/IP</string>
    <string name="basestation_manager_connect_type_ser">串口连接</string>
    <string name="basestation_manager_check_station">检测基站</string>
    <string name="basestation_manager_disconnect">断开连接</string>
    <string name="basestation_manager_connect_success">基站连接成功</string>
    <string name="basestation_manager_connect_fail">基站连接失败</string>

    <string name="basestation_manager_device_frequency">频点</string>
    <string name="basestation_manager_device_check">设备检测</string>
    <string name="basestation_manager_keyboard_type">键盘型号</string>
    <string name="basestation_manager_use_mode">使用模式</string>

    <string name="basestation_manager_system_language">系统语言</string>
    <string name="basestation_manager_system_language_ch">中文</string>
    <string name="basestation_manager_system_language_english">English</string>

    <string name="basestation_manager_use_mode_free">自由模式</string>
    <string name="basestation_manager_use_mode_fixed">固定模式</string>
    <string name="basestation_manager">管理</string>
    <string name="basestation_manager_check_online">在线：</string>
    <string name="basestation_manager_check_offline">离线：</string>
    <string name="basestation_manager_check_weak_current">弱电：</string>
    <string name="basestation_manager_begin_check">开始测试</string>
    <string name="basestation_manager_stop_check">停止测试</string>

    
    <string name="name_list_edit">编辑</string>
    <string name="name_list_add">添加</string>
    <string name="name_list_cancel">取消</string>
    <string name="name_list_del">删除</string>
    <string name="name_list_id_sn">ID</string>

    <string name="sing_settings">设置</string>
    <string name="sign_start_sign">开始签到</string>
    <string name="sign_stop_sign">停止签到</string>
    <string name="sign_had_sign">已签到:</string>
    <string name="sign_wait_sign">未签到:</string>
    <string name="sign_roll_call">点名：</string>
    <string name="sign_mode_presskey">按键签到</string>
    <string name="sign_mode_background">后台签到</string>
    <string name="sign_mode_random">随机码签到</string>

    <string name="examitation_start_exam">开始考试</string>
    <string name="examitation_end_exam">停止考试</string>
    <string name="examitation_time">考试时间</string>
    <string name="examitation_sign_mode">签到模式</string>
    <string name="examitation_replace_keyboard">键盘替换</string>
    <string name="examitation_close">关闭</string>
    <string name="examitation_save">存储</string>

    <string name="examination_view_follow_up_test">随堂测</string>
    <string name="examination_view_phase_test">阶段考</string>
    <string name="examination_view_preview">预览</string>
    <string name="examination_view_resolution">查看解析</string>
    <string name="examination_view_question_no">题号</string>
    <string name="examination_view_question_flag">题</string>
    <string name="examination_view_courses_chinese">语文</string>
    <string name="examination_view_courses_match">数学</string>
    <string name="examination_view_courses_english">英语</string>
    <string name="examination_view_courses_physics">物理</string>
    <string name="examination_view_courses_chemistry">化学</string>
    <string name="examination_view_courses_biology">生物</string>
    <string name="examination_view_courses_history">历史</string>
    <string name="examination_view_courses_geography">地理</string>
    <string name="examination_view_courses_politics">政治</string>

    <string name="examination_question_type_choose">选择题</string>
    <string name="examination_submit">提交:</string>



    <array name="testarray">
        <item>中南大学附属第二中学 高一 314班（38人）</item>
    </array>

</resources>
