<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_blank">

    <RelativeLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f0f0f0"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/class_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:text=""
            android:textSize="@dimen/big_text_p2" />

        <TextView
            android:id="@+id/class_students_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@id/class_name"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="人数：38人"
            android:textSize="@dimen/big_text_p4" />
    </RelativeLayout>

    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:id="@+id/courses"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/top_panel"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/examination_view_courses_chinese"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@drawable/chinese"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_text_p4"
                android:layout_weight="1"
                android:text="@string/examination_view_courses_chinese"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/examination_view_courses_match"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@drawable/match"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_text_p4"
                android:layout_weight="1"
                android:text="@string/examination_view_courses_match"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/examination_view_courses_english"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@drawable/english"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_text_p4"
                android:layout_weight="1"
                android:text="@string/examination_view_courses_english"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/examination_view_courses_physics"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@drawable/physics"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_text_p4"
                android:layout_weight="1"
                android:text="@string/examination_view_courses_physics"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/examination_view_courses_chemistry"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@drawable/chemistry_selected"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_text_p4"
                android:layout_weight="1"
                android:text="@string/examination_view_courses_chemistry"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/examination_view_courses_biology"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/biology"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_text_p4"
                android:text="@string/examination_view_courses_biology"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/examination_view_courses_history"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/history"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_text_p4"
                android:text="@string/examination_view_courses_history"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/examination_view_courses_geography"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/geography_selected"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_text_p4"
                android:text="@string/examination_view_courses_geography"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/examination_view_courses_politics"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/politics"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_text_p4"
                android:text="@string/examination_view_courses_politics"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/courses"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/dimgray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/line"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/filler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:padding="5dp"
                android:background="@drawable/rancnge_background">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/filter_unselected"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/home_fragment_fill_choose"
                    android:paddingRight="10dp"
                    android:textSize="@dimen/big_text_p4" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/new_paper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:background="@drawable/input_background"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/add"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_fragment_new_parper"
                    android:textColor="@color/text_blank"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:textSize="@dimen/big_text_p4" />
            </LinearLayout>


        </LinearLayout>

        <ListView
            android:id="@+id/course_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"></ListView>

    </LinearLayout>
</RelativeLayout>
