<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/bottom"
        layout="@layout/root_panel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom"
        android:orientation="horizontal">

            <!--左侧栏左边-->
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <!--头像-->
                <ImageView
                    android:id="@+id/header"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:src="@drawable/header" />
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:textSize="@dimen/big_text_p4"
                    android:text="张三"/>
                <!--试卷库-->
                <LinearLayout
                    android:id="@+id/page_linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/header"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:src="@drawable/page" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:textSize="@dimen/big_text_p4"
                        android:gravity="center"
                        android:text="@string/home_fragment_paper_bank" />

                </LinearLayout>
                <!--花名冊-->
                <LinearLayout
                    android:id="@+id/name_linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/page_linear"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:src="@drawable/name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/home_fragment_name_collection"
                        android:textSize="@dimen/big_text_p4"/>

                </LinearLayout>
                <!--短信-->
                <LinearLayout
                    android:id="@+id/message_linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_linear"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:src="@drawable/message" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/home_fragment_message_box"
                        android:textSize="@dimen/big_text_p4"/>

                </LinearLayout>
                <!--成绩册-->
                <LinearLayout
                    android:id="@+id/score_book_linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/message_linear"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:src="@drawable/score_book" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/home_fragment_score_book"
                        android:textSize="@dimen/big_text_p4"/>

                </LinearLayout>
                <!--管理-->
                <LinearLayout
                    android:id="@+id/manager_linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_below="@id/score_book_linear"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:src="@drawable/manager" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/home_fragment_manager"
                        android:textSize="@dimen/big_text_p4" />

                </LinearLayout>

            </LinearLayout>

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rancnge_background">
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>
